# numeric-opt-project

./: .gitignore  covariance_matrix.csv  mean_pnls.json  protfolio_opt.ipynb  pyproject.toml  research.ipynb  train_pnls_cov.csv  train_pnls_mean.json
backtest_pnl/: AAPL_bb_strategy.json  AAPL_ma_strategy.json  BAC_bb_strategy.json  BAC_ma_strategy.json  BTC-USD_bb_strategy.json  BTC-USD_ma_strategy.json  CL=F_bb_strategy.json  CL=F_ma_strategy.json  CVX_bb_strategy.json  CVX_ma_strategy.json  GC=F_bb_strategy.json  GC=F_ma_strategy.json  JNJ_bb_strategy.json  JNJ_ma_strategy.json  JPM_bb_strategy.json  JPM_ma_strategy.json  KO_bb_strategy.json  KO_ma_strategy.json  LITM_bb_strategy.json  LITM_ma_strategy.json  MRK_bb_strategy.json  MRK_ma_strategy.json  MSFT_bb_strategy.json  MSFT_ma_strategy.json  PFE_bb_strategy.json  PFE_ma_strategy.json  PG_bb_strategy.json  PG_ma_strategy.json  SLB_bb_strategy.json  SLB_ma_strategy.json  TSLA_bb_strategy.json  TSLA_ma_strategy.json  WFC_bb_strategy.json  WFC_ma_strategy.json  WMT_bb_strategy.json  WMT_ma_strategy.json  XOM_bb_strategy.json  XOM_ma_strategy.json
historical_data/: AAPL_data.csv  AAPL_data_test.csv  AAPL_data_train.csv  AAPL_test.csv  AAPL_train.csv  BAC_data.csv  BAC_data_test.csv  BAC_data_train.csv  BAC_test.csv  BAC_train.csv  BTC-USD_data.csv  BTC-USD_data_test.csv  BTC-USD_data_train_train.csv  CL=F_data.csv  CL=F_data_test.csv  CL=F_data_train.csv  CL=F_test.csv  CL=F_train.csv  CVX_data.csv  CVX_data_test.csv  CVX_data_train.csv  CVX_test.csv  CVX_train.csv  GC=F_data.csv  GC=F_data_test.csv  GC=F_test.csv  (+65 more)
(+4 files in other folders)
